
	* src/groupadd.c (find_new_gid): A group with the specified name
	cannot exist at that time. Remove the check.
	* src/groupadd.c (find_new_gid): If oflg is set, gflg is also set.
	Use (!gflg), which is clearer than (!gflg || !oflg).
	* src/groupadd.c (find_new_gid): find_new_gid is never called when an
	GID is specified with -g. Simplify find_new_gid accordingly.

2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>

	src/groupadd.c cleanup
	* src/groupadd.c (fail_exit): When compiled without AUDIT support, if
	the return code was E_SUCCESS, fail_exit() wouldn't have exited. Fix
	the scope of #idef WITH_AUDIT.
	* src/groupadd.c: Avoid implicit brackets.
	* src/groupadd.c: Split the processing and checking of options out of
	main() (process_flags).
	* src/groupadd.c: Add the parameters' names in the prototypes.

2007-12-27  Nicolas François  <nicolas.francois@centraliens.net>

	libmisc/copydir.c cleanup
	* libmisc/copydir.c: Split copy_tree() in more maintainable functions:
	copy_entry(), copy_dir(), copy_symlink(), copy_hardlink(),
	copy_special(), and copy_file().
	* libmisc/copydir.c: -1 is used to indicate an error, directly set err
	to -1, instead of incrementing it, and checking if not nul at the
	end.
	* libmisc/copydir.c: Avoid assignment in comparisons.
	* libmisc/copydir.c: Document selinux_file_context.
	* libmisc/copydir.c: Avoid implicit brackets.
	* libmisc/copydir.c: Avoid implicit conversions to booleans.

2007-12-27  Nicolas François  <nicolas.francois@centraliens.net>

	gpasswd cleanup
	* src/gpasswd.c: Add argument name to the internal function
	prototypes.
	* src/gpasswd.c: Document global variables.
	* src/gpasswd.c: New function: process_flags(). Split the processing
	of options out of main().
	* src/gpasswd.c: New functions: open_files(), close_files(),
	update_group(). Split out from main() to simplify this (too) big
	function.
	* src/gpasswd.c: New functions: check_perms(), get_group(),